--- a/Attraction and Repulsion/RepellerAttractor/index.html
+++ b/Attraction and Repulsion/RepellerAttractor/index.html
@@ -13,6 +13,8 @@
     <script src="attractor.js" type="text/javascript"></script>
     <script src="repeller.js" type="text/javascript"></script>
     <script src="bullet.js" type="text/javascript"></script>
+    <script src="PickUp.js" type="text/javascript"></script>
+
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
