--- a/RepellerAttractor/index.html
+++ b/RepellerAttractor/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>MoverOne</title>
+    <title>Zom-B</title>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="icon" type="icon/ico" href="icon.ico">
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
