--- a/RepellerAttractor/index.html
+++ b/RepellerAttractor/index.html
@@ -14,10 +14,18 @@
     <script src="repeller.js" type="text/javascript"></script>
     <script src="bullet.js" type="text/javascript"></script>
     <script src="PickUp.js" type="text/javascript"></script>
-
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
-
+    <script language="JavaScript">
+    /**
+      * Disable mouse right-click on page
+      * By Arthur Gareginyan (arthurgareginyan@gmail.com)
+      * For full source code, visit http://www.mycyberuniverse.com
+      */
+    document.addEventListener("contextmenu", function(e){
+        e.preventDefault();
+    }, false);
+    </script>
   </body>
 </html>
