--- a/ZomB/index.html
+++ b/ZomB/index.html
@@ -10,6 +10,7 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="Boid.js" type="text/javascript"></script>
     <script src="Attractor.js" type="text/javascript"></script>
+    <script src="Bullet.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
