--- a/ZomB/index.html
+++ b/ZomB/index.html
@@ -7,6 +7,8 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
+    <script src="p5.collide2D/p5.collide2d.js" type="text/javascript"></script>
+
     <script src="sketch.js" type="text/javascript"></script>
     <script src="Boid.js" type="text/javascript"></script>
     <script src="Attractor.js" type="text/javascript"></script>
