Added Different Types of Boids

--- a/ZomB/index.html
+++ b/ZomB/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>ZomB</title>
+    <link rel = "icon" type="icon/ico" href = "zombie.ico">
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
