--- a/ZomB/ZomB/index.html
+++ b/ZomB/ZomB/index.html
@@ -13,6 +13,7 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="Boid.js" type="text/javascript"></script>
     <script src="Attractor.js" type="text/javascript"></script>
+    <script src="Repeller.js" type="text/javascript"></script>
     <script src="Bullet.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
